Setup the intro and setup page for frontend

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -13,14 +13,24 @@ project. It documents everything regarding the application, from the Frontend
 to the Backend. The general directory structure is as follows:
 
 <FileTree>
-    <FileTree.File name="index" />
-    <FileTree.Folder name="frontend" defaultOpen>
+    <FileTree.File name="Introduction" />
+    <FileTree.Folder name="Frontend" defaultOpen>
+        <FileTree.File name="Introduction" />
+        <FileTree.File name="Setup" />
     </FileTree.Folder>
-    <FileTree.Folder name="backend" defaultOpen>
+    <FileTree.Folder name="Backend" defaultOpen>
     </FileTree.Folder>
     <FileTree.Folder name="miscellaneous" defaultOpen>
     </FileTree.Folder>
 </FileTree>
+
+## Acknowledgements
+1. [Code With Andrea](https://codewithandrea.com/): An online course that 
+teaches how to write good Flutter code and was the one who came up with the 
+architecture for our Flutter mobile app development.
+
+2. vibefam: A fitness start up where I interned at and learnt how to write 
+code for cloud functions in TypeScript.
 
 ## Get Started
 <Cards>
