Complete the saveModule api

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -13,7 +13,7 @@ project. It documents everything regarding the application, from the Frontend
 to the Backend. The general directory structure is as follows:
 
 <FileTree>
-    <FileTree.File name="Introduction" />
+    <FileTree.File name="Home" />
     <FileTree.Folder name="Frontend" defaultOpen>
         <FileTree.File name="Introduction" />
         <FileTree.File name="Setup" />
@@ -21,6 +21,8 @@ to the Backend. The general directory structure is as follows:
     <FileTree.Folder name="Backend" defaultOpen>
     </FileTree.Folder>
     <FileTree.Folder name="miscellaneous" defaultOpen>
+    </FileTree.Folder>
+    <FileTree.Folder name="services" defaultOpen>
     </FileTree.Folder>
 </FileTree>
 
